<resources>
    <string name="app_name">100thHistoryPlaces</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="map_all_places_fragment">AllPlaces</string>
    <string name="menu_name_map_all_places">All places</string>
    <string name="menu_name_user_profile">My profile</string>
    <string name="places_api_url">https://api.100national.com/</string>
    <string name="_100th_national_places">100th National Places</string>
    <string name="_100th_bg_places">100th BG Places</string>
    <string name="title_activity_signup">SignUp</string>
    <string name="confirm_password">Confirm password</string>
    <string name="example_email_com">example@email.com</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="forget_password">Forget Password?</string>
    <string name="date_hint">12/12/2012</string>
    <string name="log_out">Log out</string>
    <string name="password">@string/prompt_password</string>
    <string name="login_dont_have_acc">Don\'t have an account?\nSign Up Here</string>
    <string name="sign_in">Sign In</string>
    <string name="debug_test_user_email">sadss@asd.com</string>
    <string name="debug_test_user_email_new">sadss1@asd.com</string>
    <string name="debug_test_user_pass">12345678</string>
    <string name="debug_test_user_first_name">Bojo</string>
    <string name="debug_test_user_last_name">Petio</string>
    <string name="debug_test_user_birth_date">11/09/2011</string>
    <string name="pick_date">pick Date</string>
    <string name="error_choose_date_before_today">Please choose date before today</string>
    <string name="default_location">Sofia</string>
    <string name="permission_rationale_location">permission_rationale_location</string>
    <string name="permission_required_toast">permission_required_toast</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="default_access_token" />
    <string name="preferences_key_access_token">access_token</string>
    <string name="current_latitude">current_latitude</string>
    <string name="current_longitude">current_longitude</string>


    <string name="loading">Loading</string>
    <string name="language">Language: %s</string>
    <string name="search_hint">Search Place by name</string>
    <string name="no_results">No results 😓 Search again</string>
    <string name="unknown">\?</string>
    <string name="retry">Retry</string>
    <string name="tools_ndk_description">Националният дворец на културата, съкратено НДК, е национален културен център в София за конференции, изложби и специални събития, най-големият конгресен център в Югоизточна Европа.</string>
    <string name="leave_name_empty">Please leave name empty to show all places</string>
    <string name="description">Description</string>
    <string name="view_on_map">View place on Map</string>
</resources>
